--- a/index.html
+++ b/index.html
@@ -3,11 +3,12 @@
   <head>
     <meta charset="utf-8">
     <meta name="viewport" content="width=device-width">
-    <title>Three.js app</title>
+    <title>Realtime Earth</title>
     <link href="style.css" rel="stylesheet" type="text/css" />
     
   </head>
   <body>
+    <canvas class="webgl"></canvas>
     <!-- Including the three.js library -->
     <script async src="https://unpkg.com/es-module-shims@1.3.6/dist/es-module-shims.js"></script>
 
